--- a/src/main/resources/inspectionDescriptions/ReservedFunctionName.html
+++ b/src/main/resources/inspectionDescriptions/ReservedFunctionName.html
@@ -1,9 +1,9 @@
 <html>
 <body>
 <p>
-    This inspection checks for Scripting 1.0 and MarkLogic reserved function
-    names. XQuery 1.0 and XQuery 3.0 reserved function names are handled in
-    the main parser.
+    This inspection checks for Scripting Extension 1.0 and MarkLogic reserved
+    function names. XQuery 1.0 and XQuery 3.0 reserved function names are
+    handled in the main parser.
 </p>
 <p>
     These constructs would raise XPST0003 errors on XQuery processors supporting
