--- a/src/main/resources/inspectionDescriptions/UnsupportedXQueryVersion.html
+++ b/src/main/resources/inspectionDescriptions/UnsupportedXQueryVersion.html
@@ -2,8 +2,13 @@
 <body>
 <p>
     This inspection checks the version in an XQuery version declaration for
-    values supported by the selected XQuery processor.
+    values supported by the selected XQuery processor. Unsupported versions
+    would raise XQST0031 errors on the XQuery processor.
 </p>
-<p>These constructs would raise XQST0081 errors on the XQuery processor.</p>
+<p>
+    This inspection also checks that the XQuery version is the same across
+    MarkLogic transactions. Different versions would raise
+    XDMP-XQUERYVERSIONSWITCH errors on MarkLogic.
+</p>
 </body>
 </html>
